# Diabetes-Readmission-Analytics

./: .gitignore  QUICKSTART.md  README.md  app.py  main.py  pyproject.toml  run.sh
src/: data_processing.py  modeling.py  visualization.py
views/: __init__.py  data_analysis.py  data_overview.py  modeling_page.py  predictions.py
