[project]
name = "diabetes-analytics"
version = "0.1.0"
description = "Diabetes Hospital Analytics - Complete analytics pipeline with ML models and Streamlit UI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "streamlit>=1.28.0",
]

[project.scripts]
app = "app:main"
